--- a/THL/index.htm
+++ b/THL/index.htm
@@ -229,27 +229,27 @@
 
                 <div class="col-lg-12 m-b-100 center">
                     <div class="heading-text heading-section text-center">
-                        <h2 id="wiki" style="color: #fff;" data-animate-delay="600" data-animate="flipInX" class="mobile-title lh-mobile">What we focus on <br><b><small style=" font-weight: bold"><strong style="color:#ff00d2;font-weight: bold">C</strong>reativity, <strong style="color:#ff00d2;font-weight: bold ">C</strong>onnection & <strong style="color:#ff00d2;font-weight: bold ">C</strong>ulture   </small></b></h2>
+                        <h2 id="wiki" style="color: #fff;" data-animate-delay="600" data-animate="flipInX" class="mobile-title lh-mobile">What we focus on <br><b><span style=" font-weight: bold"><strong style="color:#ff00d2;font-weight: bold">C</strong>reativity, <strong style="color:#ff00d2;font-weight: bold ">C</strong>onnection & <strong style="color:#ff00d2;font-weight: bold ">C</strong>ulture   </span></b></h2>
                         <div class="row">
                             <div class="col-12 col-lg-4">
-                                <h3 class="mobile-title" style="color:#ff00d2;font-size: 40px;" data-animate-delay="600" data-animate="fadeInUp">Creativity</h3>
+                                <h3 class="mobile-title" style="color:#ff00d2;font-size: 40px;" data-animate-delay="600" data-animate="fadeInUp">CREATIVITY</h3>
                                 <p class="mobile-text" style="color: #fff;font-size: 1.5rem;font-weight: 500;" data-animate-delay="600" data-animate="fadeInUp">We stay innovative by keeping creative and forward Always remaining ‘ahead of the curb’ to influence the latest trends and iconic fashion statements. <a onclick="vermas('mas', 'uno')" class="ancla_mas" id="mas1">... [more]</a></p>
                                 </p>
-                                <p class="hidde" id="desplegar1" style=" color: #fff;font-size: 1.5rem;font-weight: 500; " data-animate-delay="600 " data-animate="fadeInUp
+                                <p class="hidde mobile-text" id="desplegar1" style=" color: #fff;font-size: 1.5rem;font-weight: 500; " data-animate-delay="600 " data-animate="fadeInUp
                                     "> Curating sets from the ground up, and having the best team of photographers and videographers on board means that brands have one less thing to worry about, as we have all the necessary tools needed to execute a vision,
                                     whether big or small - the possibilities are endless.<a onclick="vermas( 'menos', 'uno') " class="ancla_mas " id="menos1 ">... [less]</a></p>
                             </div>
                             <div class="col-12 col-lg-4 ">
-                                <h3 class="mobile-title" style="color:#ff00d2;font-size: 40px; " data-animate-delay="600 " data-animate="fadeInUp ">Connection</h3>
+                                <h3 class="mobile-title" style="color:#ff00d2;font-size: 40px; " data-animate-delay="600 " data-animate="fadeInUp ">CONNECTION</h3>
                                 <p class="mobile-text" style="color: #fff;font-size: 1.5rem;font-weight: 500; " data-animate-delay="600 " data-animate="fadeInUp ">Focusing on representation and building connections individually and as partnerships is our number one priority as an agency. To create harmonious <a onclick="vermas('mas', 'dos')" class="ancla_mas" id="mas2">... [more]</a>
                                 </p>
-                                <p class="mobile-text" class="hidde" id="desplegar2" style="color: #fff;font-size: 1.5rem;font-weight: 500; " data-animate-delay="600 " data-animate="fadeInUp ">relationships ensures the best results for successful campaigns and enables longevity investments. We have established relationships with a network of pioneering talents within an influential culture. This has given us
+                                <p class="hidde mobile-text" id="desplegar2" style="color: #fff;font-size: 1.5rem;font-weight: 500; " data-animate-delay="600 " data-animate="fadeInUp ">relationships ensures the best results for successful campaigns and enables longevity investments. We have established relationships with a network of pioneering talents within an influential culture. This has given us
                                     a competitive advantage to create strategic partnerships. We aim to bridge the gap between brands and the culture, creating new sustainable connections. <a onclick="vermas( 'menos', 'dos') " class="ancla_mas " id="menos2 ">... [less]</a></p>
                             </div>
                             <div class="col-12 col-lg-4 ">
-                                <h3 class="mobile-title" style="color:#ff00d2;font-size: 40px; " data-animate-delay="600 " data-animate="fadeInUp ">Culture</h3>
+                                <h3 class="mobile-title" style="color:#ff00d2;font-size: 40px; " data-animate-delay="600 " data-animate="fadeInUp ">CULTURE</h3>
                                 <p class="mobile-text" style="color: #fff;font-size: 1.5rem;font-weight: 500; " data-animate-delay="600 " data-animate="fadeInUp ">Having an anthropologist amongst our team ensures a greater understanding in the importance of culture and representation, making sure all cultures feel enriched <a onclick="vermas('mas', 'tres')" class="ancla_mas" id="mas3">... [more]</a></p>
-                                <p class="mobile-text" class="hidde" id="desplegar3" style="color: #fff;font-size: 1.5rem;font-weight: 500; " data-animate-delay="600 " data-animate="fadeInUp ">and not exploited through our marketing and featured campaigns. We take a holistic approach by combining measurable data with culturally informed human insights to ensure we can communicate better with the target audience.
+                                <p class="hidde mobile-text" id="desplegar3" style="color: #fff;font-size: 1.5rem;font-weight: 500; " data-animate-delay="600 " data-animate="fadeInUp ">and not exploited through our marketing and featured campaigns. We take a holistic approach by combining measurable data with culturally informed human insights to ensure we can communicate better with the target audience.
                                     <a onclick="vermas( 'menos', 'tres') " class="ancla_mas " id="menos3 ">... [less]</a></p>
                             </div>
                             <div class="col-12 ">
