--- a/THL/pages/about-me.html
+++ b/THL/pages/about-me.html
@@ -234,14 +234,14 @@
                             <h1 id="wiki" style="color: #fff;    font-size: 48px;font-weight: bold; text-align:center" class="mobile-title">WHAT WE DO</h1>
                             <div class="row">
                                 <div class="col-12 col-lg-4">
-                                    <h3 style="font-weight: bold" class="mobile-title">Talent</h3>
+                                    <h3 style="font-weight: bold;text-align: center;" class="mobile-title">Talent</h3>
                                     <p style="font-size: 1.5rem;font-weight: bold" class="mobile-text">We utilise our unique access to an extensive catalog of diverse talent with a combined following of 20+ million.
                                         <a onclick="vermas('mas', 'uno')" class="ancla_mas mobile-text" id="mas1">... [more]</a></p>
                                     <p class="hidde mobile-text" id="desplegar1" style="font-size: 1.5rem;font-weight: bold">We have created special relationships with our talent which sets us apart and gives us the advantage of being able to match clients with the right brands ensuring the most compatible representation for campaigns.
                                         <a onclick="vermas('menos', 'uno')" class="ancla_mas mobile-text" id="menos1">... [less]</a></p>
                                 </div>
                                 <div class="col-12 col-lg-4">
-                                    <h3 style="font-weight: bold" class="mobile-title">Marketing</h3>
+                                    <h3 style="font-weight: bold; text-align: center;" class="mobile-title">Marketing</h3>
                                     <p style="font-size: 1.5rem;font-weight: bold" class="mobile-text">The old restrictive, oppressive methods of marketing are now outdated. We have adopted a new method of approaching
                                         <a onclick="vermas('mas', 'dos')" class="ancla_mas mobile-text" id="mas2">... [more]</a></p>
                                     <p class="hidde mobile-text" id="desplegar2" style="font-size: 1.5rem;font-weight: bold">projects with a forward thinking style, that allows a much more inclusive and impactful result for a brands longevity. Being immersed within the culture has allowed us to establish a rapport with key influencers, this
@@ -250,7 +250,7 @@
                                         <a onclick="vermas('menos', 'dos')" class="ancla_mas mobile-text" id="menos2">... [less]</a></p>
                                 </div>
                                 <div class="col-12 col-lg-4">
-                                    <h3 style="font-weight: bold" class="mobile-title">Creative production</h3>
+                                    <h3 style="font-weight: bold; text-align: center;" class="mobile-title">Creative production</h3>
                                     <p style="font-size: 1.5rem;font-weight: bold" class="mobile-text">We are able to produce influential campaigns from start to finish, using our in-house creative production team. Whether a brand wants
                                         <a onclick="vermas('mas', 'tres')" class="ancla_mas mobile-text" id="mas3">... [more]</a></p>
                                     <p class="hidde mobile-text" id="desplegar3" style="font-size: 1.5rem;font-weight: bold"> full creative control or needs someone to take control of the creative process The Hidden London are able to create engaging content, ensuring we reach your goals.
