--- a/THL/pages/about-me.html
+++ b/THL/pages/about-me.html
@@ -207,7 +207,7 @@
                             <!-- <span data-animate="fadeInUp" data-animate-delay="300" class="strong"><a href="#" class="business"><span class="business">Blockchain 3.0</span></a>
                             </span> -->
 
-                            <h1 data-animate="fadeInUp" data-animate-delay="600">About us
+                            <h1 data-animate="fadeInUp" data-animate-delay="600">ABOUT US
                                 <font color="#0f2123">.</font>
                             </h1>
                         </div>
