--- a/THL/pages/campaing-strategy.html
+++ b/THL/pages/campaing-strategy.html
@@ -32,7 +32,7 @@
         }
         
         .submenu-light .header-inner #logo a.content-logo {
-            background-image: url(../images/01.png);
+            background-image: url(../images/02.png);
         }
         
         .header-sticky .header-inner #logo a.content-logo {
@@ -204,14 +204,14 @@
                     <!-- <div class="col-lg-6 col-12">
                         <img src="../images/fondos/intagram-destacada.jpg" alt="" class="img-fluid">
                     </div> -->
-                    <div class="col-12 col-lg-2"></div>
-                    <div class="col-lg-8 col-12">
-                        <p data-animate="fadeInUp" data-animate-delay="600"><span class="lead" style="color:#fff; font-weight: bold;font-size: 1.5rem;">
+                    <div class="col-1 col-lg-2"></div>
+                    <div class="col-lg-8 col-10">
+                        <p data-animate="fadeInUp" data-animate-delay="600"><span class="lead mobile-text" style="color:#fff; font-weight: bold;font-size: 1.5rem;">
                             We undertake extensive research that enables us to create a tailor made strategy that is unique and specific to brands. Carefully choosing the most fitting representation.</span>
                         </p>
-                        <p data-animate="fadeInUp" data-animate-delay="600"><span class="lead" style="color:#fff; font-weight: bold;font-size: 1.5rem;">From our extensive roster of influencers and talent, then combining this with our vast access to creative production brings forth innovative ideas including; curating immersive experiences, product placements, event hosting, digital content creation plus much more.</span></p>
+                        <p data-animate="fadeInUp" data-animate-delay="600"><span class="lead mobile-text" style="color:#fff; font-weight: bold;font-size: 1.5rem;">From our extensive roster of influencers and talent, then combining this with our vast access to creative production brings forth innovative ideas including; curating immersive experiences, product placements, event hosting, digital content creation plus much more.</span></p>
                     </div>
-                    <div class="col-12 col-lg-2"></div>
+                    <div class="col-1 col-lg-2"></div>
                 </div>
             </div>
 
