--- a/THL/pages/services.html
+++ b/THL/pages/services.html
@@ -141,31 +141,31 @@
                             <div class="col-12 mb-5">
                                 <a href="./campaing-strategy.html" class="mouse_hover" data-imagen="box-instagram">
                                     <!-- <span class="url">/CAMPAING-STRATEGY</span> -->
-                                    <h2 class="">CAMPAIGN STRATEGY</h2>
+                                    <h2 class="mobile-title text-center">CAMPAIGN STRATEGY</h2>
                                 </a>
                             </div>
                             <div class="col-12 mb-5">
                                 <a href="./production_content_creation.html" class="mouse_hover" data-imagen="box-facebook">
                                     <!-- <span class="url">/PRODUCTION_CONTENT_CREATION</span> -->
-                                    <h2 class="">PRODUCTION & CONTENT CREATION</h2>
+                                    <h2 class="mobile-title text-center">PRODUCTION & CONTENT CREATION</h2>
                                 </a>
                             </div>
                             <div class="col-12 mb-5">
                                 <a href="./digital_data_marketing.html" class="mouse_hover" data-imagen="box-twitter">
                                     <!-- <span class="url">/DIGITAL_DATA_MARKETING</span> -->
-                                    <h2 class="">DIGITAL DATA & MARKETING</h2>
+                                    <h2 class="mobile-title text-center">DIGITAL DATA & MARKETING</h2>
                                 </a>
                             </div>
                             <div class="col-12 mb-5">
                                 <a href="./brand_talent_relations.html" class="mouse_hover" data-imagen="box-youtube">
                                     <!-- <span class="url">/BRAND_TALENT_RELATIONS</span> -->
-                                    <h2 class="">BRAND & TALENT RELATIONS</h2>
+                                    <h2 class="mobile-title text-center">BRAND & TALENT RELATIONS</h2>
                                 </a>
                             </div>
                             <div class="col-12 mb-5">
                                 <a href="./legal_compliance.html" class="mouse_hover" data-imagen="box-soudcould">
                                     <!-- <span class="url">/LEGAL_COMPLIANCE</span> -->
-                                    <h2 class="">LEGAL & COMPLIANCE</h2>
+                                    <h2 class="mobile-title text-center">LEGAL & COMPLIANCE</h2>
                                 </a>
                             </div>
                         </div>
