--- a/THL/pages/contacto.html
+++ b/THL/pages/contacto.html
@@ -100,7 +100,7 @@
                 <div class="container">
                     <!--Logo-->
                     <div id="logo">
-                        <a href="../index.htm" >
+                        <a href="../index.htm">
                             <!-- <img class="img-ligth img-general" src="../images/01.png" alt=""> -->
                         </a>
                     </div>
@@ -164,7 +164,7 @@
                     </div>
                     <div class="col-12 col-lg-4 text-center" data-animate="fadeInUp" data-animate-delay="600">
                         <!-- <h5 style="color: #fff">General enquires</h5> -->
-                        <a href="./general_equires.html" class="btn-thl">General enquires</a>
+                        <a href="./general_equires.html" class="btn-thl">General Enquiries</a>
                     </div>
 
                 </div>
