--- a/THL/pages/general_equires.html
+++ b/THL/pages/general_equires.html
@@ -180,7 +180,7 @@
                         <div class="row">
                             <div class="col-lg-12">
                                 <div class="heading-text heading-section">
-                                    <h2 id="contact" style="color: #fff;">General enquires</h2>
+                                    <h2 id="contact" style="color: #fff;">General Enquiries</h2>
                                     <p class="lead" style="color: #fff;">Have any questions or queries? Then please reach out to us by email or through the contact form on the right.</p>
                                 </div>
                             </div>
