Ajuste de unidades

--- a/THL/pages/contacto.html
+++ b/THL/pages/contacto.html
@@ -137,7 +137,7 @@
                         <!-- <span data-animate="fadeInUp" data-animate-delay="300" class="strong"><a href="#" class="business"><span class="business">Blockchain 3.0</span></a>
                         </span> -->
 
-                        <h1 data-animate="fadeInUp" data-animate-delay="600">Contact us
+                        <h1 data-animate="fadeInUp" data-animate-delay="600">CONTACT US
                             <font color="#0f2123">.</font>
                         </h1>
                     </div>
@@ -156,15 +156,15 @@
 
                     <div class="col-12 col-lg-4 text-center" data-animate="fadeInUp" data-animate-delay="600">
                         <!-- <h5 style="color: #fff">Brand</h5> -->
-                        <a href="./brand.html" class="btn-thl">Brand</a>
+                        <a href="./brand.html" class="btn-thl">BRAND</a>
                     </div>
                     <div class="col-12 col-lg-4 text-center" data-animate="fadeInUp" data-animate-delay="600">
                         <!-- <h5 style="color: #fff">Talent</h5> -->
-                        <a href="./talent.html" class="btn-thl">Talent</a>
+                        <a href="./talent.html" class="btn-thl">TALENT</a>
                     </div>
                     <div class="col-12 col-lg-4 text-center" data-animate="fadeInUp" data-animate-delay="600">
                         <!-- <h5 style="color: #fff">General enquires</h5> -->
-                        <a href="./general_equires.html" class="btn-thl">General Enquiries</a>
+                        <a href="./general_equires.html" class="btn-thl">GENERAL ENQUIRIES</a>
                     </div>
 
                 </div>
