--- a/THL/pages/digital_data_marketing.html
+++ b/THL/pages/digital_data_marketing.html
@@ -33,7 +33,7 @@
         }
         
         .submenu-light .header-inner #logo a.content-logo {
-            background-image: url(../images/01.png);
+            background-image: url(../images/02.png);
         }
         
         .header-sticky .header-inner #logo a.content-logo {
@@ -180,7 +180,7 @@
                         <!-- <span data-animate="fadeInUp" data-animate-delay="300" class="strong"><a href="#" class="business"><span class="business">Blockchain 3.0</span></a>
                         </span> -->
 
-                        <h1 data-animate="fadeInUp" data-animate-delay="600">Digital data & marketing
+                        <h1 data-animate="fadeInUp" data-animate-delay="600">DIGITAL DATA & MARKETING
                             <font color="#0f2123">.</font>
                         </h1>
                     </div>
@@ -206,7 +206,7 @@
                     </div> -->
                     <div class="col-12 col-lg-2"></div>
                     <div class="col-lg-8 col-12">
-                        <p><span class="lead" style="color:#fff; font-weight: bold;    font-size: 1.5rem;"> We pride ourselves on being data-driven as it is the best way to ensure results. We use measurable information to track the effectiveness of each influencer and their engagement. Promotion via digital platforms is the new age approach and has proven to be the most effective method.</span></p>
+                        <p><span class="lead mobile-text" style="color:#fff; font-weight: bold;    font-size: 1.5rem;"> We pride ourselves on being data-driven as it is the best way to ensure results. We use measurable information to track the effectiveness of each influencer and their engagement. Promotion via digital platforms is the new age approach and has proven to be the most effective method.</span></p>
                     </div>
                     <div class="col-12 col-lg-2"></div>
                 </div>
