--- a/THL/pages/brand_talent_relations.html
+++ b/THL/pages/brand_talent_relations.html
@@ -33,7 +33,7 @@
         }
         
         .submenu-light .header-inner #logo a.content-logo {
-            background-image: url(../images/01.png);
+            background-image: url(../images/02.png);
         }
         
         .header-sticky .header-inner #logo a.content-logo {
@@ -183,7 +183,7 @@
                         <!-- <span data-animate="fadeInUp" data-animate-delay="300" class="strong"><a href="#" class="business"><span class="business">Blockchain 3.0</span></a>
                         </span> -->
 
-                        <h1 data-animate="fadeInUp" data-animate-delay="600">Brand & talent relations
+                        <h1 data-animate="fadeInUp" data-animate-delay="600">BRAND & TALENT RELATIONS
                             <font color="#0f2123">.</font>
                         </h1>
                     </div>
@@ -204,7 +204,7 @@
                     </div> -->
                     <div class="col-12 col-lg-2"></div>
                     <div class="col-lg-8 col-12">
-                        <p><span class="lead" style="color:#fff; font-weight: bold;font-size: 1.5rem;">Focusing on representation and building connections individually and as partnerships is our number one priority as an agency. To create harmonious relationships ensures the best results for successful campaigns and enables longevity investments. Working on product gifting, fashion collaborations (brands to talent and brands to brands) helps to reinforce these relationships and keep the connections strong.</span></p>
+                        <p><span class="lead mobile-text" style="color:#fff; font-weight: bold;font-size: 1.5rem;">Focusing on representation and building connections individually and as partnerships is our number one priority as an agency. To create harmonious relationships ensures the best results for successful campaigns and enables longevity investments. Working on product gifting, fashion collaborations (brands to talent and brands to brands) helps to reinforce these relationships and keep the connections strong.</span></p>
                     </div>
                     <div class="col-12 col-lg-2"></div>
                 </div>
