--- a/THL/pages/general_equires.html
+++ b/THL/pages/general_equires.html
@@ -160,7 +160,7 @@
                         <!-- <span data-animate="fadeInUp" data-animate-delay="300" class="strong"><a href="#" class="business"><span class="business">Blockchain 3.0</span></a>
                         </span> -->
 
-                        <h1 data-animate="fadeInUp" data-animate-delay="600">Get in contact
+                        <h1 data-animate="fadeInUp" data-animate-delay="600">GET IN CONTACT
                             <font color="#0f2123">.</font>
                         </h1>
                     </div>
@@ -180,8 +180,8 @@
                         <div class="row">
                             <div class="col-lg-12">
                                 <div class="heading-text heading-section">
-                                    <h2 id="contact" style="color: #fff;">General Enquiries</h2>
-                                    <p class="lead" style="color: #fff;">Have any questions or queries? Then please reach out to us by email or through the contact form on the right.</p>
+                                    <h2 id="contact mobile-title" style="color: #fff;">General Enquiries</h2>
+                                    <p class="lead mobile-text" style="color: #fff;">Have any questions or queries? Then please reach out to us by email or through the contact form on the right.</p>
                                 </div>
                             </div>
                             <div class="col-lg-6 m-b-30" style="color: #fff;">
@@ -220,20 +220,20 @@
                             <input type="hidden" name="type-form" class="type-form" value="general-enquires">
                             <div class="row">
                                 <div class="form-group col-md-6">
-                                    <label for="name" style="color: #fff;">Name</label>
+                                    <label for="name" style="color: #fff;" class="mobile-text">Name</label>
                                     <input type="text" aria-required="true" required="" name="widget-contact-form-name" class="form-control required name" placeholder="Enter your Name">
                                 </div>
                                 <div class="form-group col-md-6">
-                                    <label for="email" style="color: #fff;">Email</label>
+                                    <label for="email" style="color: #fff;" class="mobile-text">Email</label>
                                     <input type="email" aria-required="true" required="" name="widget-contact-form-email" class="form-control required email" placeholder="Enter your Email">
                                 </div>
                             </div>
                             <div class="form-group">
-                                <label for="message" style="color: #fff;">Message</label>
+                                <label for="message" style="color: #fff;" class="mobile-text">Message</label>
                                 <textarea type="text" required="" name="widget-contact-form-message" rows="8" class="form-control required" placeholder="Enter your Message"></textarea>
                             </div>
                             <div class="form-group">
-                                <button class="btn btn-light" type="submit" id="form-submit"><i class="fa fa-paper-plane"></i>&nbsp;Send message</button>
+                                <button class="btn btn-light mobile-title" type="submit" id="form-submit"><i class="fa fa-paper-plane"></i>&nbsp;Send message</button>
                             </div>
                         </form>
 
