--- a/THL/pages/legal_compliance.html
+++ b/THL/pages/legal_compliance.html
@@ -33,7 +33,7 @@
         }
         
         .submenu-light .header-inner #logo a.content-logo {
-            background-image: url(../images/01.png);
+            background-image: url(../images/02.png);
         }
         
         .header-sticky .header-inner #logo a.content-logo {
@@ -152,7 +152,7 @@
                         <!-- <span data-animate="fadeInUp" data-animate-delay="300" class="strong"><a href="#" class="business"><span class="business">Blockchain 3.0</span></a>
                         </span> -->
 
-                        <h1 data-animate="fadeInUp" data-animate-delay="600">Legal & compliance
+                        <H1 DATA-ANIMATE="FADEINUP" DATA-ANIMATE-DELAY="600">LEGAL & COMPLIANCE
                             <font color="#0f2123">.</font>
                         </h1>
                     </div>
@@ -178,7 +178,7 @@
                     </div> -->
                     <div class="col-12 col-lg-2"></div>
                     <div class="col-lg-8 col-12">
-                        <p><span class="lead" style="color:#fff; font-weight: bold;font-size: 1.5rem;">Our legal team produces the most safe and secure contracts, protecting brands and talent involved in campaigns or collaborations, making sure ethics and finances are all treated fairly with care and delicacy.</span></p>
+                        <p><span class="lead mobile-text" style="color:#fff; font-weight: bold;font-size: 1.5rem;">Our legal team produces the most safe and secure contracts, protecting brands and talent involved in campaigns or collaborations, making sure ethics and finances are all treated fairly with care and delicacy.</span></p>
                     </div>
                     <div class="col-12 col-lg-2"></div>
                 </div>
