--- a/THL/pages/talent.html
+++ b/THL/pages/talent.html
@@ -148,7 +148,7 @@
                         <!-- <span data-animate="fadeInUp" data-animate-delay="300" class="strong"><a href="#" class="business"><span class="business">Blockchain 3.0</span></a>
                         </span> -->
 
-                        <h1 data-animate="fadeInUp" data-animate-delay="600">Get in contact
+                        <h1 data-animate="fadeInUp" data-animate-delay="600">GET IN CONTACT
                             <font color="#0f2123">.</font>
                         </h1>
                     </div>
@@ -168,7 +168,7 @@
                         <div class="row">
                             <div class="col-lg-12">
                                 <div class="heading-text heading-section">
-                                    <h2 id="contact" style="color: #fff;">Talent</h2>
+                                    <h2 id="contact" style="color: #fff;" class="mobile-title">Talent</h2>
                                     <!-- <p class="lead">Have questions or concerns? Than please reach out to us by email or through the contact form  the right.</p> -->
                                 </div>
                             </div>
@@ -181,38 +181,38 @@
                             <input type="hidden" name="type-form" class="type-form" value="talent">
                             <div class="row">
                                 <div class="form-group col-md-4">
-                                    <label for="name" style="color: #fff;">Name</label>
+                                    <label for="name" style="color: #fff;" class="mobile-text">Name</label>
                                     <input type="text" aria-required="true" required="" name="widget-contact-form-name" class="form-control required name" placeholder="Enter your Name">
                                 </div>
                                 <div class="form-group col-md-4">
-                                    <label for="name" style="color: #fff;">Last Name</label>
+                                    <label for="name" style="color: #fff;" class="mobile-text">Last Name</label>
                                     <input type="text" aria-required="true" required="" name="widget-contact-form-last-name" class="form-control required name" placeholder="Enter your Last Name">
                                 </div>
                                 <div class="form-group col-md-4">
-                                    <label for="email" style="color: #fff;">Email</label>
+                                    <label for="email" style="color: #fff;" class="mobile-text">Email</label>
                                     <input type="email" aria-required="true" required="" name="widget-contact-form-email" class="form-control required email" placeholder="Enter your Email">
                                 </div>
                             </div>
                             <div class="row">
                                 <div class="form-group col-md-4">
-                                    <label for="name" style="color: #fff;">Phone</label>
+                                    <label for="name" style="color: #fff;" class="mobile-text">Phone</label>
                                     <input type="text" aria-required="true" required="" name="widget-contact-form-Phone" class="form-control required name" placeholder="Enter your Phone">
                                 </div>
                                 <div class="form-group col-md-4">
-                                    <label for="name" style="color: #fff;">Where are you based?</label>
+                                    <label for="name" style="color: #fff;" class="mobile-text">Where are you based?</label>
                                     <input type="text" aria-required="true" required="" name="widget-contact-form-based" class="form-control required name" placeholder="Where are you based?">
                                 </div>
                                 <div class="form-group col-md-4">
-                                    <label for="email" style="color: #fff;">Categories of interest?</label>
+                                    <label for="email" style="color: #fff;" class="mobile-text">Categories of interest?</label>
                                     <input type="text" aria-required="true" required="" name="widget-contact-form-interest" class="form-control required email" placeholder="Categories of interest?">
                                 </div>
                             </div>
                             <div class="form-group">
-                                <label for="message" style="color: #fff;">Social platform handles (Instagram, YouTube, Twitter, TikTok)</label>
+                                <label for="message" style="color: #fff;" class="mobile-text">Social platform handles (Instagram, YouTube, Twitter, TikTok)</label>
                                 <textarea type="text" required="" name="widget-contact-form-message" rows="8" class="form-control required" placeholder="Social Platform Handles (Instagram, YouTube, Twitter, TikTok)"></textarea>
                             </div>
                             <div class="form-group">
-                                <button class="btn btn-light" type="submit" id="form-submit"><i class="fa fa-paper-plane"></i>&nbsp;Send message</button>
+                                <button class="btn btn-light mobile-title" type="submit" id="form-submit"><i class="fa fa-paper-plane"></i>&nbsp;Send message</button>
                             </div>
                         </form>
 
