Ajuste de titulos

--- a/THL/pages/production_content_creation.html
+++ b/THL/pages/production_content_creation.html
@@ -89,6 +89,11 @@
             #open1 {
                 display: block;
             }
+            .mobile-title-principal {
+                font-size: 40px !important;
+                line-height: 40px;
+                margin-top: 40px;
+            }
         }
         
         .card {
@@ -194,7 +199,7 @@
             <div class="container">
                 <div class="heading-text heading-section">
                     <div class="col-12">
-                        <h1 data-animate="fadeInUp" data-animate-delay="600">Production & content creation
+                        <h1 class="mobile-title-principal" data-animate="fadeInUp" data-animate-delay="600">PRODUCTION & CONTENT CREATION
                             <font color="#0f2123">.</font>
                         </h1>
                     </div>
